@@ -18,6 +18,7 @@ public class GOTEntityMullin extends GOTEntityHumanBase implements GOTTradeable 
 		addTargetTasks(true);
 		setIsLegendaryNPC();
 		setSize(0.6f, 1.8f);
+		isImmuneToFrost = true;
 		tasks.addTask(0, new EntityAISwimming(this));
 		tasks.addTask(2, new GOTEntityAIAttackOnCollide(this, 1.4, false));
 		tasks.addTask(2, new EntityAIOpenDoor(this, true));
