@@ -17,6 +17,7 @@ public class GOTEntityEdd extends GOTEntityHumanBase {
 		addTargetTasks(true);
 		setIsLegendaryNPC();
 		setSize(0.6f, 1.8f);
+		isImmuneToFrost = true;
 		tasks.addTask(0, new EntityAISwimming(this));
 		tasks.addTask(1, new GOTEntityAIHiredRemainStill(this));
 		tasks.addTask(2, new GOTEntityAIAttackOnCollide(this, 1.4, false));
