@@ -1,13 +1,17 @@
 CHANGELOG
 
 >>VERSION 17.7
+* Greatly improved the Wall
 * Greatly improved all the banners in the game (prod. Hummel009)
++ Added ruined wall castles
++ Added fixed castles in mountain biomes
 + Added Asshai Shield
 + Added feminized ranks
 + Added a config option for maximum fellowship size
 + Added a config option to tune how often the mod clears the playerdata cache for offline players' data
-+ Added new fixed locations (The Eyrie)
++ Added new fixed locations, ruines in general. Now 99% of waypoints have fixed structure.
 
+* Improved Samwell Tarly skin
 * Improved Ghiscar Pit
 * Improved village spawning
 * Improved Petyr Baelish's brothel and Tobho Mott's smithy
@@ -25,6 +29,7 @@ CHANGELOG
 * Optimized NPCs checking for players with their miniquests
 * Optimized rendering code
 
+* Fixed bug with frost damaging gift legendary mobs
 * Fixed bug with goldsmithes in westeros
 * Fixed bug with essos children not spawning in houses
 * Fixed bug with villages in the villages
